syntax = "proto3";

package filesystem_discovery;

option go_package = ".;pb";

import "google/protobuf/timestamp.proto";

message FileAttr {
    string path = 1;
    string name = 2;
    string type = 3;
    int64 size = 4;
    google.protobuf.Timestamp created_at  = 5;
    google.protobuf.Timestamp accessed_at = 6;
    google.protobuf.Timestamp modified_at = 7;
    enum attributes {
        HIDDEN = 0;
        READONLY = 1; 
        READWRITE = 3;
    }
    string content = 8;
}
